* Thu Feb 15 2007 Jesse Keating <jkeating@redhat.com>
- Various logging tweaks
- Use -d flag in createrepo for sqlite blobs
- Add pydoc stuff to various functions
- Support comments in the package manifest

* Wed Feb 14 2007 Jesse Keating <jkeating@redhat.com>
- Add logging patch from jbowes

* Tue Feb 13 2007 Jesse Keating <jkeating@redhat.com>
- Fix part of the patch from Essien
- Add Contributors to the Authors file
- Adjust the Makefile so that srpm doesn't cause a tag
- Merged changes from Will Woods
  - Write out some tree description files
  - Don't traceback on existing files in download area (not sure this will stay)
- Style fixed some stuff from Will

* Mon Feb 12 2007 Jesse Keating <jkeating@redhat.com>
- Add new Make targets (Essien Ita Essien)
- Add runtime flags for doing specific stages of the compose (Essien Ita Essien)
- Add ability to define destdir on the cli to override conf file
- Clean up optionparse stuff, print usage if arg list is too small

* Thu Feb 08 2007 Jesse Keating <jkeating@redhat.com>
- Add support for globbing in manifest

* Tue Feb 06 2007 Jesse Keating <jkeating@redhat.com>
- yum bestPackagesFromList takes an arch argument. Fixes ppc64 bug
- Don't use 'returnSimple' anymore, deprecated in yum api
- Speed up depsolving a bit by tracking solved deps

* Sat Feb 03 2007 Jesse Keating <jkeating@redhat.com>
- Be able to opt-out of a bugurl since buildinstall supports this
- Make isodir an object of pungi (wwoods)

* Tue Jan 30 2007 Jesse Keating <jkeating@redhat.com>
- implantmd5 _then_ sha1sum.

* Mon Jan 29 2007 Jesse Keating <jkeating@redhat.com>
- Update the comps file again from F7
- Fix the ppc boot flags
- Clean up SRPM-disc junk
- add bugurl config option for anaconda betanag

* Thu Jan 25 2007 Jesse Keating <jkeating@redhat.com>
- Update the comps file from F7

* Wed Jan 24 2007 Jesse Keating <jkeating@redhat.com>
- Add a "flavor" option (such as Desktop)
- Move packageorder file into workdir