@@ -1,3 +1,7 @@
+* Fri Feb 16 2007 Jesse Keating <jkeating@redhat.com>
+- Make use of anaconda's TMPDIR support
+- Put yum tempdirs in the workdir
+
 * Thu Feb 15 2007 Jesse Keating <jkeating@redhat.com>
 - Various logging tweaks
 - Use -d flag in createrepo for sqlite blobs
